tests/ui/extern/extern-static-size-overflow.stderr
error: extern static is too large for the target architecture
  --> $DIR/extern-static-size-overflow.rs:20:5
   |
LL |     static BAZ: [u8; max_size()];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

